--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,142 +1,265 @@
-name: Parsec Screenshot Working
+name: Parsec Auto Login
 on:
   workflow_dispatch:
 
 jobs:
-  parsec:
+  parsec-login:
     runs-on: windows-latest
     timeout-minutes: 30
 
     steps:
       - name: Setup directory
         run: |
-          $workDir = "D:\a\SEB\SEB\parsec"
+          $workDir = "D:\a\SEB\SEB\parsec-login"
           New-Item -ItemType Directory -Path $workDir -Force
           Set-Location $workDir
           echo "WORK_DIR=$workDir" >> $env:GITHUB_ENV
           Write-Host "Working in: $workDir"
 
-      - name: Download screenshot tools
-        run: |
-          # Method 1: Download nircmd from reliable source
-          $nircmdUrl = "https://www.nirsoft.net/utils/nircmd.zip"
-          $zipPath = "$env:TEMP\nircmd.zip"
-          Write-Host "Downloading NirCmd..."
-          Invoke-WebRequest -Uri $nircmdUrl -OutFile $zipPath
-          
-          # Extract
-          Expand-Archive -Path $zipPath -DestinationPath "$env:TEMP\nircmd_extract" -Force
-          
-          # Find nircmd.exe
-          $nircmdExe = Get-ChildItem -Path "$env:TEMP\nircmd_extract" -Filter "nircmd.exe" -Recurse | Select-Object -First 1
-          if ($nircmdExe) {
-              $destPath = "$env:WORK_DIR\nircmd.exe"
-              Copy-Item -Path $nircmdExe.FullName -Destination $destPath -Force
-              echo "NIRCMD_PATH=$destPath" >> $env:GITHUB_ENV
-              Write-Host "NirCmd copied to: $destPath"
-          }
-
-      - name: Test screenshot with PowerShell (guaranteed to work)
-        run: |
-          Write-Host "Testing PowerShell screenshot method..."
-          Add-Type -AssemblyName System.Windows.Forms
-          Add-Type -AssemblyName System.Drawing
-          
-          $screen = [System.Windows.Forms.Screen]::PrimaryScreen
-          $bounds = $screen.Bounds
-          $bitmap = New-Object System.Drawing.Bitmap($bounds.Width, $bounds.Height)
-          $graphics = [System.Drawing.Graphics]::FromImage($bitmap)
-          $graphics.CopyFromScreen($bounds.Location, [System.Drawing.Point]::Empty, $screen.Bounds.Size)
-          
-          $screenshotPath = "$env:WORK_DIR\test_powershell.png"
-          $bitmap.Save($screenshotPath, [System.Drawing.Imaging.ImageFormat]::Png)
-          $graphics.Dispose()
-          $bitmap.Dispose()
-          
-          Write-Host "Screenshot saved: $screenshotPath"
-          Write-Host "File size: $((Get-Item $screenshotPath).Length / 1KB) KB"
-
-      - name: Download Parsec
+      - name: Install Parsec
         run: |
           Write-Host "Downloading Parsec..."
           $parsecUrl = "https://builds.parsec.app/package/parsec-windows.exe"
           $parsecPath = "$env:WORK_DIR\parsec.exe"
           Invoke-WebRequest -Uri $parsecUrl -OutFile $parsecPath
-          Write-Host "Parsec downloaded: $((Get-Item $parsecPath).Length / 1MB) MB"
-
-      - name: Install Parsec
-        run: |
-          Write-Host "Installing Parsec silently..."
-          Start-Process -FilePath "$env:WORK_DIR\parsec.exe" -ArgumentList "/S" -Wait -NoNewWindow
-          Start-Sleep -Seconds 10
           
-          # Screenshot after install
+          Write-Host "Installing Parsec..."
+          Start-Process -FilePath $parsecPath -ArgumentList "/S" -Wait -NoNewWindow
+          Start-Sleep -Seconds 10
+
+      - name: Take initial screenshot
+        run: |
+          Add-Type -AssemblyName System.Windows.Forms
+          Add-Type -AssemblyName System.Drawing
+          
+          $screen = [System.Windows.Forms.Screen]::PrimaryScreen
+          $bounds = $screen.Bounds
+          $bitmap = New-Object System.Drawing.Bitmap($bounds.Width, $bounds.Height)
+          $graphics = [System.Drawing.Graphics]::FromImage($bitmap)
+          $graphics.CopyFromScreen($bounds.Location, [System.Drawing.Point]::Empty, $bounds.Size)
+          $bitmap.Save("$env:WORK_DIR\initial.png", [System.Drawing.Imaging.ImageFormat]::Png)
+          $graphics.Dispose()
+          $bitmap.Dispose()
+          Write-Host "Initial screenshot saved"
+
+      - name: Start Parsec UI
+        run: |
+          Write-Host "Starting Parsec UI..."
+          # Launch Parsec GUI
+          $parsecExe = "C:\Program Files\Parsec\parsecd.exe"
+          if (Test-Path $parsecExe) {
+              Start-Process -FilePath $parsecExe
+          } else {
+              # Try alternative path
+              $parsecExe = "$env:LOCALAPPDATA\Parsec\parsecd.exe"
+              if (Test-Path $parsecExe) {
+                  Start-Process -FilePath $parsecExe
+              } else {
+                  Write-Host "Parsec executable not found"
+              }
+          }
+          Start-Sleep -Seconds 5
+
+      - name: Take screenshot of login screen
+        run: |
+          Write-Host "Taking screenshot of login screen..."
+          Add-Type -AssemblyName System.Windows.Forms
+          Add-Type -AssemblyName System.Drawing
+          
+          $screen = [System.Windows.Forms.Screen]::PrimaryScreen
+          $bounds = $screen.Bounds
+          $bitmap = New-Object System.Drawing.Bitmap($bounds.Width, $bounds.Height)
+          $graphics = [System.Drawing.Graphics]::FromImage($bitmap)
+          $graphics.CopyFromScreen($bounds.Location, [System.Drawing.Point]::Empty, $bounds.Size)
+          $bitmap.Save("$env:WORK_DIR\login_screen.png", [System.Drawing.Imaging.ImageFormat]::Png)
+          $graphics.Dispose()
+          $bitmap.Dispose()
+
+      - name: Simulate login with AutoHotkey
+        run: |
+          Write-Host "Creating AutoHotkey script for login..."
+          
+          # Create AHK script
+          $ahkScript = @"
+#NoEnv
+SendMode Input
+SetWorkingDir %A_ScriptDir%
+
+; Wait for Parsec window (adjust title if needed)
+WinWait, Parsec, , 30
+if ErrorLevel
+{
+    ; Take screenshot if window not found
+    Run, powershell -Command "Add-Type -AssemblyName System.Windows.Forms; Add-Type -AssemblyName System.Drawing; `$screen = [System.Windows.Forms.Screen]::PrimaryScreen; `$bounds = `$screen.Bounds; `$bitmap = New-Object System.Drawing.Bitmap(`$bounds.Width, `$bounds.Height); `$graphics = [System.Drawing.Graphics]::FromImage(`$bitmap); `$graphics.CopyFromScreen(`$bounds.Location, [System.Drawing.Point]::Empty, `$bounds.Size); `$bitmap.Save('$env:WORK_DIR\no_window.png', [System.Drawing.Imaging.ImageFormat]::Png); `$graphics.Dispose(); `$bitmap.Dispose()"
+    ExitApp
+}
+
+; Activate Parsec window
+WinActivate, Parsec
+WinWaitActive, Parsec, , 5
+Sleep, 1000
+
+; Take screenshot before login attempt
+Run, powershell -Command "Add-Type -AssemblyName System.Windows.Forms; Add-Type -AssemblyName System.Drawing; `$screen = [System.Windows.Forms.Screen]::PrimaryScreen; `$bounds = `$screen.Bounds; `$bitmap = New-Object System.Drawing.Bitmap(`$bounds.Width, `$bounds.Height); `$graphics = [System.Drawing.Graphics]::FromImage(`$bitmap); `$graphics.CopyFromScreen(`$bounds.Location, [System.Drawing.Point]::Empty, `$bounds.Size); `$bitmap.Save('$env:WORK_DIR\before_login.png', [System.Drawing.Imaging.ImageFormat]::Png); `$graphics.Dispose(); `$bitmap.Dispose()"
+
+; Try to click on email field (might need adjustment)
+Sleep, 2000
+Click, 500, 300  ; Approximate coordinates for email field - ADJUST THESE!
+
+; Type email
+Send, ffbewafa709@gmail.com
+Sleep, 1000
+
+; Tab to password field
+Send, {Tab}
+Sleep, 500
+
+; Type password
+Send, Hamza@123456
+Sleep, 1000
+
+; Take screenshot with credentials entered
+Run, powershell -Command "Add-Type -AssemblyName System.Windows.Forms; Add-Type -AssemblyName System.Drawing; `$screen = [System.Windows.Forms.Screen]::PrimaryScreen; `$bounds = `$screen.Bounds; `$bitmap = New-Object System.Drawing.Bitmap(`$bounds.Width, `$bounds.Height); `$graphics = [System.Drawing.Graphics]::FromImage(`$bitmap); `$graphics.CopyFromScreen(`$bounds.Location, [System.Drawing.Point]::Empty, `$bounds.Size); `$bitmap.Save('$env:WORK_DIR\credentials_entered.png', [System.Drawing.Imaging.ImageFormat]::Png); `$graphics.Dispose(); `$bitmap.Dispose()"
+
+; Click login button (might need adjustment)
+Sleep, 1000
+Click, 500, 400  ; Approximate coordinates for login button - ADJUST THESE!
+
+; Wait and take final screenshot
+Sleep, 5000
+Run, powershell -Command "Add-Type -AssemblyName System.Windows.Forms; Add-Type -AssemblyName System.Drawing; `$screen = [System.Windows.Forms.Screen]::PrimaryScreen; `$bounds = `$screen.Bounds; `$bitmap = New-Object System.Drawing.Bitmap(`$bounds.Width, `$bounds.Height); `$graphics = [System.Drawing.Graphics]::FromImage(`$bitmap); `$graphics.CopyFromScreen(`$bounds.Location, [System.Drawing.Point]::Empty, `$bounds.Size); `$bitmap.Save('$env:WORK_DIR\after_login_click.png', [System.Drawing.Imaging.ImageFormat]::Png); `$graphics.Dispose(); `$bitmap.Dispose()"
+
+Sleep, 3000
+"@
+          
+          # Save AHK script
+          $ahkPath = "$env:WORK_DIR\login.ahk"
+          $ahkScript | Out-File -FilePath $ahkPath -Encoding UTF8
+          
+          # Download AutoHotkey
+          Write-Host "Downloading AutoHotkey..."
+          $ahkInstaller = "$env:WORK_DIR\AutoHotkey_Setup.exe"
+          Invoke-WebRequest -Uri "https://www.autohotkey.com/download/ahk-install.exe" -OutFile $ahkInstaller
+          
+          # Install AutoHotkey silently
+          Write-Host "Installing AutoHotkey..."
+          Start-Process -FilePath $ahkInstaller -ArgumentList "/S" -Wait -NoNewWindow
+          Start-Sleep -Seconds 5
+          
+          # Run the AHK script
+          Write-Host "Running AutoHotkey script..."
+          $ahkExe = "C:\Program Files\AutoHotkey\AutoHotkey.exe"
+          if (Test-Path $ahkExe) {
+              Start-Process -FilePath $ahkExe -ArgumentList $ahkPath
+              Start-Sleep -Seconds 10
+          }
+
+      - name: Wait for 2FA and manual intervention
+        run: |
+          Write-Host "=========================================="
+          Write-Host "MANUAL STEP NEEDED:"
+          Write-Host "1. Check email ffbewafa709@gmail.com for 2FA code"
+          Write-Host "2. The workflow will wait 90 seconds"
+          Write-Host "3. After 90 seconds, it will continue"
+          Write-Host "=========================================="
+          Start-Sleep -Seconds 90
+          
+          # Take screenshot after wait
           Add-Type -AssemblyName System.Windows.Forms
           Add-Type -AssemblyName System.Drawing
           $screen = [System.Windows.Forms.Screen]::PrimaryScreen
           $bounds = $screen.Bounds
           $bitmap = New-Object System.Drawing.Bitmap($bounds.Width, $bounds.Height)
           $graphics = [System.Drawing.Graphics]::FromImage($bitmap)
-          $graphics.CopyFromScreen($bounds.Location, [System.Drawing.Point]::Empty, $screen.Bounds.Size)
-          $bitmap.Save("$env:WORK_DIR\after_install.png", [System.Drawing.Imaging.ImageFormat]::Png)
+          $graphics.CopyFromScreen($bounds.Location, [System.Drawing.Point]::Empty, $bounds.Size)
+          $bitmap.Save("$env:WORK_DIR\after_2fa_wait.png", [System.Drawing.Imaging.ImageFormat]::Png)
           $graphics.Dispose()
           $bitmap.Dispose()
 
-      - name: Take multiple Parsec screenshots
+      - name: Try to find and click Share button
         run: |
-          Write-Host "Taking multiple Parsec screenshots..."
+          Write-Host "Attempting to find Share button..."
           
-          for ($i = 1; $i -le 5; $i++) {
+          # Take screenshot first
+          Add-Type -AssemblyName System.Windows.Forms
+          Add-Type -AssemblyName System.Drawing
+          $screen = [System.Windows.Forms.Screen]::PrimaryScreen
+          $bounds = $screen.Bounds
+          $bitmap = New-Object System.Drawing.Bitmap($bounds.Width, $bounds.Height)
+          $graphics = [System.Drawing.Graphics]::FromImage($bitmap)
+          $graphics.CopyFromScreen($bounds.Location, [System.Drawing.Point]::Empty, $bounds.Size)
+          $bitmap.Save("$env:WORK_DIR\before_share.png", [System.Drawing.Imaging.ImageFormat]::Png)
+          $graphics.Dispose()
+          $bitmap.Dispose()
+          
+          # Create another AHK script for Share button
+          $shareScript = @"
+#NoEnv
+SendMode Input
+SetWorkingDir %A_ScriptDir%
+
+; Wait a moment
+Sleep, 5000
+
+; Take screenshot
+Run, powershell -Command "Add-Type -AssemblyName System.Windows.Forms; Add-Type -AssemblyName System.Drawing; `$screen = [System.Windows.Forms.Screen]::PrimaryScreen; `$bounds = `$screen.Bounds; `$bitmap = New-Object System.Drawing.Bitmap(`$bounds.Width, `$bounds.Height); `$graphics = [System.Drawing.Graphics]::FromImage(`$bitmap); `$graphics.CopyFromScreen(`$bounds.Location, [System.Drawing.Point]::Empty, `$bounds.Size); `$bitmap.Save('$env:WORK_DIR\ahk_share_attempt.png', [System.Drawing.Imaging.ImageFormat]::Png); `$graphics.Dispose(); `$bitmap.Dispose()"
+
+; Try clicking at different positions where Share button might be
+; Position 1: Top area
+Click, 700, 100
+Sleep, 1000
+
+; Position 2: Middle area  
+Click, 700, 300
+Sleep, 1000
+
+; Position 3: Bottom area
+Click, 700, 500
+Sleep, 1000
+
+; Final screenshot
+Run, powershell -Command "Add-Type -AssemblyName System.Windows.Forms; Add-Type -AssemblyName System.Drawing; `$screen = [System.Windows.Forms.Screen]::PrimaryScreen; `$bounds = `$screen.Bounds; `$bitmap = New-Object System.Drawing.Bitmap(`$bounds.Width, `$bounds.Height); `$graphics = [System.Drawing.Graphics]::FromImage(`$bitmap); `$graphics.CopyFromScreen(`$bounds.Location, [System.Drawing.Point]::Empty, `$bounds.Size); `$bitmap.Save('$env:WORK_DIR\after_share_clicks.png', [System.Drawing.Imaging.ImageFormat]::Png); `$graphics.Dispose(); `$bitmap.Dispose()"
+
+Sleep, 3000
+"@
+          
+          $sharePath = "$env:WORK_DIR\share.ahk"
+          $shareScript | Out-File -FilePath $sharePath -Encoding UTF8
+          
+          # Run share script
+          $ahkExe = "C:\Program Files\AutoHotkey\AutoHotkey.exe"
+          if (Test-Path $ahkExe) {
+              Start-Process -FilePath $ahkExe -ArgumentList $sharePath
+              Start-Sleep -Seconds 10
+          }
+
+      - name: Take final screenshots
+        run: |
+          Write-Host "Taking final screenshots..."
+          for ($i = 1; $i -le 3; $i++) {
               Add-Type -AssemblyName System.Windows.Forms
               Add-Type -AssemblyName System.Drawing
-              
               $screen = [System.Windows.Forms.Screen]::PrimaryScreen
               $bounds = $screen.Bounds
               $bitmap = New-Object System.Drawing.Bitmap($bounds.Width, $bounds.Height)
               $graphics = [System.Drawing.Graphics]::FromImage($bitmap)
-              $graphics.CopyFromScreen($bounds.Location, [System.Drawing.Point]::Empty, $screen.Bounds.Size)
-              
-              $fileName = "parsec_$i.png"
-              $bitmap.Save("$env:WORK_DIR\$fileName", [System.Drawing.Imaging.ImageFormat]::Png)
+              $graphics.CopyFromScreen($bounds.Location, [System.Drawing.Point]::Empty, $bounds.Size)
+              $bitmap.Save("$env:WORK_DIR\final_$i.png", [System.Drawing.Imaging.ImageFormat]::Png)
               $graphics.Dispose()
               $bitmap.Dispose()
-              
-              Write-Host "Screenshot $i saved"
               Start-Sleep -Seconds 2
           }
 
-      - name: Verify files before upload
-        run: |
-          Write-Host "=== VERIFYING FILES ==="
-          Write-Host "Current directory: $(Get-Location)"
-          
-          Write-Host "All files in directory:"
-          Get-ChildItem -Path $env:WORK_DIR | Format-Table Name, Length, LastWriteTime -AutoSize
-          
-          $pngFiles = Get-ChildItem -Path $env:WORK_DIR -Filter "*.png"
-          Write-Host "PNG files found: $($pngFiles.Count)"
-          if ($pngFiles.Count -gt 0) {
-              $pngFiles | ForEach-Object {
-                  $sizeKB = [math]::Round($_.Length / 1KB, 2)
-                  Write-Host "  ✓ $($_.Name) - $sizeKB KB"
-              }
-          } else {
-              Write-Host "  ✗ No PNG files found!"
-              Write-Host "Creating a test file..."
-              "Test content" | Out-File "$env:WORK_DIR\test.txt"
-          }
-
-      - name: Upload screenshots
+      - name: Upload all screenshots
         uses: actions/upload-artifact@v4
         with:
-          name: parsec-screenshots
-          path: D:\a\SEB\SEB\parsec\*.png
-          if-no-files-found: error
+          name: parsec-login-screenshots
+          path: D:\a\SEB\SEB\parsec-login\*.png
           retention-days: 1
 
-      - name: Upload all files as backup
+      - name: Upload all files for debugging
         uses: actions/upload-artifact@v4
         with:
-          name: parsec-all-files
-          path: D:\a\SEB\SEB\parsec\
+          name: parsec-login-all-files
+          path: D:\a\SEB\SEB\parsec-login\
           retention-days: 1
